Fix #7239 "Landing: better alignment of columns"

--- a/form-runner/jvm/src/main/assets/apps/fr/style/form-runner-landing.less
+++ b/form-runner/jvm/src/main/assets/apps/fr/style/form-runner-landing.less
@@ -20,7 +20,7 @@ html {
 
     .fr-mode-landing {
         .row {
-            justify-content: space-evenly;
+            justify-content: start; // https://github.com/orbeon/orbeon-forms/issues/7239
             & > * {
                 max-width: 400px;
             }
